--- a/README.Rmd
+++ b/README.Rmd
@@ -108,20 +108,18 @@ stations <- stations[n == 1,][, n := NULL]
 What is the median station in terms of temperature, wind speed, and atmospheric pressure? Look for the three weather stations that best represent continental U
 S using the `quantile()` function. Do these three coincide?
 
-```{r}
+```{r question1}
 head(stations)
 names(stations)
 
 met <-(merge(x = met, y = stations, by.x="USAFID", by.y="USAF", all.x=TRUE, all.y=FALSE))
 
 
-
-
 met_stations <- met[, .(
-  wind.sp = mean(wind.sp, na.rm=TRUE),
-  atm.press = mean(atm.press, na.rm=TRUE),
-  temp = mean(temp,na.rm=TRUE)
-),by = .(USAFID,STATE)]
+    wind.sp   = mean(wind.sp, na.rm = TRUE),
+    atm.press = mean(atm.press, na.rm = TRUE),
+    temp      = mean(temp, na.rm = TRUE)
+  ), by = .(USAFID, STATE)]
 
 #computing the median
 met_stations[, temp50 :=quantile(temp,probs=0.5, na.rm=TRUE)]
@@ -130,7 +128,7 @@ met_stations[, windsp50 :=quantile(wind.sp,probs=0.5, na.rm=TRUE)]
 
 met_stations
 
-#filtering the data
+# Filtering the data
 met_stations[which.min(abs(temp - temp50))]
 met_stations[which.min(abs(atm.press - atmp50))]
 met_stations[which.min(abs(wind.sp - windsp50))]
@@ -150,18 +148,34 @@ Knit the document, commit your changes, and Save it on GitHub. Don't forget to a
 Just like the previous question, you are asked to identify what is the most representative, the median, station per state. This time, instead of looking at one variable at a time, look at the euclidean distance. If multiple stations show in the median, select the one located at the lowest latitude.
 
 
-```{r}
-# obtaining averages per station
-met_stations <- met[, .(
-    wind.sp = mean(wind.sp, na.rm=TRUE),
-    atm.press = mean(atm.press, na.rm=TRUE),
-    temp = mean(temp,na.rm = TRUE),
-    by = USAFID)]
+```{r question2}
+
+
+
 
 #computing the median
-met_stations[, temp50 := quantile(temp,probs=0.5, na.rm=TRUE)]
-met_stations[, atmp50 := quantile(atm.press, probs=0.5, na.rm=TRUE)]
-met_stations[, windsp50 := quantile(wind.sp, probs=0.5, na.rm=TRUE)]
+met_stations[, temp50s := quantile(temp,probs=0.5, na.rm=TRUE), by = STATE]
+met_stations[, atmp50s := quantile(atm.press, probs=0.5, na.rm=TRUE), by = STATE]
+met_stations[, windsp50s := quantile(wind.sp, probs=0.5, na.rm=TRUE), by = STATE]
+
+
+#temperature
+met_stations[, tempdif := which.min(abs(temp-temp50s)), by=STATE]
+met_stations[, recordid := 1:.N, by=STATE]
+met_stations[recordid == tempdif, .(USAFID, temp, temp50s, STATE)]
+
+#ATM press
+met_stations[, tempdif := which.min(abs(atm.press-atmp50s)), by=STATE]
+met_stations[recordid == tempdif, .(USAFID, atm.press, atmp50s, STATE)]
+
+
+#Wind speed
+met_stations[, tempdif := which.min(abs(wind.sp-windsp50s)), by=STATE]
+met_stations[recordid == tempdif, .(USAFID, wind.sp, windsp50s, STATE)]
+
+
+
+
 ```
 
 Knit the doc and save it on GitHub.
@@ -171,6 +185,21 @@ Knit the doc and save it on GitHub.
 For each state, identify what is the station that is closest to the mid-point of the state. Combining these with the stations you identified in the previous question, use `leaflet()` to visualize all ~100 points in the same figure, applying different colors for those identified in this question.
 
 ```{r}
+
+met_stations <- met[, .(
+    wind.sp = mean(wind.sp, na.rm=TRUE),
+    atm.press = mean(atm.press, na.rm=TRUE),
+    temp = mean(temp,na.rm = TRUE)),
+    by = .(USAFID, STATE)]
+
+
+#computing the median
+met_stations[, temp50s := quantile(temp,probs=0.5, na.rm=TRUE), by = STATE]
+met_stations[, atmp50s := quantile(atm.press, probs=0.5, na.rm=TRUE), by = STATE]
+met_stations[, windsp50s := quantile(wind.sp, probs=0.5, na.rm=TRUE), by = STATE]
+
+
+
 
 ```
 
@@ -187,6 +216,7 @@ Start by computing the states' average temperature. Use that measurement to clas
 - High: temp >= 25
 
 ```{r}
+
 
 ```
 
