--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Lab 05 - Data Wrangling"
+author: "Suyeon Ryu"
+date: '2020 9 9 '
 output: html_document
 ---
 
@@ -153,28 +155,22 @@ Just like the previous question, you are asked to identify what is the most repr
 
 
 
-#computing the median
-met_stations[, temp50s := quantile(temp,probs=0.5, na.rm=TRUE), by = STATE]
-met_stations[, atmp50s := quantile(atm.press, probs=0.5, na.rm=TRUE), by = STATE]
-met_stations[, windsp50s := quantile(wind.sp, probs=0.5, na.rm=TRUE), by = STATE]
+# Computing the median
+met_stations[, temp50s   := quantile(temp, probs = .5, na.rm = TRUE), by = STATE]
+met_stations[, atmp50s   := quantile(atm.press, probs = .5, na.rm = TRUE), by = STATE]
+met_stations[, windsp50s := quantile(wind.sp, probs = .5, na.rm = TRUE), by = STATE]
 
 
-#temperature
-met_stations[, tempdif := which.min(abs(temp-temp50s)), by=STATE]
-met_stations[, recordid := 1:.N, by=STATE]
-met_stations[recordid == tempdif, .(USAFID, temp, temp50s, STATE)]
-
-#ATM press
-met_stations[, tempdif := which.min(abs(atm.press-atmp50s)), by=STATE]
+# Temperature
+met_stations[, tempdif  := which.min(abs(temp - temp50s)), by=STATE]
+met_stations[, recordid := 1:.N, by = STATE]
+met_temp <- met_stations[recordid == tempdif, .(USAFID, temp, temp50s, STATE)]
+# ATM press
+met_stations[, tempdif  := which.min(abs(atm.press - atmp50s)), by=STATE]
 met_stations[recordid == tempdif, .(USAFID, atm.press, atmp50s, STATE)]
-
-
-#Wind speed
-met_stations[, tempdif := which.min(abs(wind.sp-windsp50s)), by=STATE]
+# Wind speed
+met_stations[, tempdif  := which.min(abs(wind.sp - windsp50s)), by=STATE]
 met_stations[recordid == tempdif, .(USAFID, wind.sp, windsp50s, STATE)]
-
-
-
 
 ```
 
@@ -185,21 +181,46 @@ Knit the doc and save it on GitHub.
 For each state, identify what is the station that is closest to the mid-point of the state. Combining these with the stations you identified in the previous question, use `leaflet()` to visualize all ~100 points in the same figure, applying different colors for those identified in this question.
 
 ```{r}
+met_stations <- unique(met[, .(USAFID, STATE, lon, lat)])
+met_stations[, n := 1:.N, by = USAFID]
+met_stations <- met_stations[n == 1]
+# This is a short cut using the .SD keyword
+# met_stations[, .SD[1], by = USAFID] 
+met_stations[, lat_mid := quantile(lat, probs = .5, na.rm = TRUE), by = STATE]
+met_stations[, lon_mid := quantile(lon, probs = .5, na.rm = TRUE), by = STATE]
+# Looking at the euclidean distances
+met_stations[,  distance := sqrt((lat - lat_mid)^2 + (lon - lon_mid)^2)]
+met_stations[, minrecord := which.min(distance), by = STATE]
+met_stations[, n := 1:.N, by = STATE]
+met_location <- met_stations[n == minrecord, .(USAFID, STATE, lon, lat)]
+met_location
 
-met_stations <- met[, .(
-    wind.sp = mean(wind.sp, na.rm=TRUE),
-    atm.press = mean(atm.press, na.rm=TRUE),
-    temp = mean(temp,na.rm = TRUE)),
-    by = .(USAFID, STATE)]
+
+all_stations <- met[, .(USAFID, lat, lon, STATE)][, .SD[1], by = "USAFID"]
+
+# Recovering lon and lat from the original dataset
+met_temp <- merge(
+  x = met_temp,
+  y = all_stations,
+  by = "USAFID",
+  all.x = TRUE, all.y = FALSE
+)
 
 
-#computing the median
-met_stations[, temp50s := quantile(temp,probs=0.5, na.rm=TRUE), by = STATE]
-met_stations[, atmp50s := quantile(atm.press, probs=0.5, na.rm=TRUE), by = STATE]
-met_stations[, windsp50s := quantile(wind.sp, probs=0.5, na.rm=TRUE), by = STATE]
-
-
-
+library(leaflet)
+# Combining datasets
+dat1 <- met_location[, .(lon, lat)]
+dat1[, type := "Center of the state"]
+# Combining datasets
+dat2 <- met_temp[, .(lon, lat)]
+dat2[, type := "Center of the temperature"]
+dat <- rbind(dat1, dat2)
+# Copy paste from previous lab
+rh_pal <- colorFactor(c('blue', 'red'),
+                       domain = as.factor(dat$type))
+leaflet(dat) %>%
+  addProviderTiles("OpenStreetMap") %>%
+  addCircles(lng = ~lon, lat = ~lat, color=~rh_pal(type), opacity=1,fillOpacity=1, radius=500)
 
 ```
 
