--- a/Lab09/09-lab.Rmd
+++ b/Lab09/09-lab.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Lab 9 - HPC"
-output: tufte::tufte_html
-link-citations: yes
+output: github_document
+author : Suyeon Ryu
+
 ---
 
 # Learning goals
@@ -19,6 +20,11 @@ Give yourself a few minutes to think about what you just learned. List three
 examples of problems that you believe may be solved using parallel computing,
 and check for packages on the HPC CRAN task view that may be related to it.
 
+Corss-validation in machine learning : carat, mlr
+bootstrapping : boot
+Monte carlo simulation : parallel
+agent based modeling : parallel
+
 ## Problem 2: Before you
 
 The following functions can be written to be more efficient without using
@@ -27,7 +33,10 @@ parallel:
 1. This function generates a `n x k` dataset with all its entries distributed
 poission with mean `lambda`.
 
-```{r p2-fun1, eval = FALSE}
+```{r p2-fun1, eval = TRUE}
+install.packages("microbenchmark")
+install.packages("parallel")
+
 fun1 <- function(n = 100, k = 4, lambda = 4) {
   x <- NULL
   for (i in 1:n)
@@ -36,18 +45,20 @@ fun1 <- function(n = 100, k = 4, lambda = 4) {
 
 fun1alt <- function(n = 100, k = 4, lambda = 4) {
   # YOUR CODE HERE
+  matrix(rpois(n*k, lambda=lambda),ncol=k)
+  
 }
 
 # Benchmarking
 microbenchmark::microbenchmark(
   fun1(),
-  fun1alt()
+  fun1alt(), unit = "relative"
 )
 ```
 
 2.  Find the column max (hint: Checkout the function `max.col()`).
 
-```{r p2-fun2, eval = FALSE}
+```{r p2-fun2, eval = TRUE}
 # Data Generating Process (10 x 10,000 matrix)
 set.seed(1234)
 x <- matrix(rnorm(1e4), nrow=10)
@@ -59,13 +70,17 @@ fun2 <- function(x) {
 
 fun2alt <- function(x) {
   # YOUR CODE HERE
+  x[cbind(
+    max.col(t(x)),
+    1:ncol(x)
+  )]
 }
 
-# Benchmarking
+# Benchmarking; comparing how fast 
 microbenchmark::microbenchmark(
-  fun2(),
-  fun2alt()
-)
+  fun2(x),
+  fun2alt(x), unit="relative"
+) # 10 times faster!!
 ```
 
 ## Problem 3: Parallelize everyhing
@@ -80,7 +95,7 @@ observations from our original dataset, which reflects the population.
 
 This function implements the non-parametric bootstrap:
 
-```{r p3-boot-fun, eval = FALSE}
+```{r p3-boot-fun, eval = TRUE}
 my_boot <- function(dat, stat, R, ncpus = 1L) {
   
   # Getting the random indices
@@ -88,18 +103,23 @@ my_boot <- function(dat, stat, R, ncpus = 1L) {
   idx <- matrix(sample.int(n, n*R, TRUE), nrow=n, ncol=R)
  
   # Making the cluster using `ncpus`
-  # STEP 1: GOES HERE
-  # STEP 2: GOES HERE
+  # STEP 1: Make cluster
+  cl <- makePSOCKcluster(ncpus)
   
-    # STEP 3: THIS FUNCTION NEEDS TO BE REPLACES WITH parLapply
-  ans <- lapply(seq_len(R), function(i) {
+  # STEP 2: set it up(export data ifneeded), idx, dat
+  clusterExport(cl, varlist = c("idx","dat", "stat"), envir = environment())
+ 
+  
+  # STEP 3: THIS FUNCTION NEEDS TO BE REPLACES WITH parLapply
+  ans <- parLapply(cl, seq_len(R), function(i) {
     stat(dat[idx[,i], , drop=FALSE])
   })
   
   # Coercing the list into a matrix
   ans <- do.call(rbind, ans)
   
-  # STEP 4: GOES HERE
+  # STEP 4: stop the cluster
+  stopCluster(cl)
   
   ans
   
@@ -109,19 +129,21 @@ my_boot <- function(dat, stat, R, ncpus = 1L) {
 1. Use the previous pseudocode, and make it work with parallel. Here is just an example
 for you to try:
 
-```{r p3-test-boot, eval = FALSE}
+```{r p3-test-boot, eval = TRUE}
 # Bootstrap of an OLS
 my_stat <- function(d) coef(lm(y ~ x, data=d))
 
 # DATA SIM
 set.seed(1)
-n <- 500; R <- 1e4
+n <- 500 
+R <- 1e4
 
-x <- cbind(rnorm(n)); y <- x*5 + rnorm(n)
+x <- cbind(rnorm(n))
+y <- x*5 + rnorm(n)
 
 # Checking if we get something similar as lm
 ans0 <- confint(lm(y~x))
-ans1 <- my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+ans1 <- my_boot(dat = data.frame(x, y), my_stat, R = R, ncpus = 2L)
 
 # You should get something like this
 t(apply(ans1, 2, quantile, c(.025,.975)))
@@ -137,9 +159,9 @@ ans0
 2. Check whether your version actually goes faster than the non-parallel version:
 
 
-```{r benchmark-problem3, eval = FALSE}
-system.time(my_boot(dat = data.frame(x, y), mi_stat, R = 4000, ncpus = 1L))
-system.time(my_boot(dat = data.frame(x, y), mi_stat, R = 4000, ncpus = 2L))
+```{r benchmark-problem3, eval = TRUE}
+system.time(my_boot(dat = data.frame(x, y), my_stat, R = 3000, ncpus = 1L))
+system.time(my_boot(dat = data.frame(x, y), my_stat, R = 3000, ncpus = 2L))
 ```
 
 ## Problem 4: Compile this markdown document using Rscript
